<resources>
    <string name="app_name">RoomDemo</string>
    <string name="product_id">ID</string>
    <string name="not_assigned">Not assigned</string>
    <string name="product_name">Name</string>
    <string name="product_quantity">Phone Number</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="deletebutton">deletebutton</string>
    <string name="sort_asc">Asc</string>
    <string name="sort_des">Des</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_name">Enter Name</string>
</resources>